# cppgame

./: .gitignore  CMakeLists.txt  LICENCE  README.md  cppgame
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/noise/: CMakeLists.txt
lib/noise/include/: noise1234.h
lib/stb/: CMakeLists.txt
res/images/: blocks.xcf  crosshair.xcf  tex3.xcf
res/shaders/: chunk.frag  chunk.vert  shader.frag  shader.vert  simple.frag  simple.vert  ui.frag  ui.vert
src/: block.cc  block.hh  camera.cc  camera.hh  chunk.cc  chunk.hh  chunkmesh.cc  chunkmesh.hh  debug_render.cc  debug_render.hh  hud_render.cc  hud_render.hh  image_util.cc  image_util.hh  input.cc  input.hh  main.cc  renderer.cc  renderer.hh  shader.cc  shader.hh  vao.cc  vao.hh  vbo.cc  vbo.hh  window.cc  window.hh  world.cc  world.hh  world_render.cc  world_render.hh
